Update: add references

--- a/Jupyter Transcription vs Size.ipynb
+++ b/Jupyter Transcription vs Size.ipynb
@@ -384,9 +384,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b321bed9",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "[1] Harlen, Kevin M., et al. \"Comprehensive RNA polymerase II interactomes reveal distinct and varied roles for each phospho-CTD residue.\" Cell reports 15.10 (2016): 2147-2158.\n",
+    "\n",
+    "[2] Georges, Adrien, et al. \"Functional interplay between Mediator and RNA polymerase II in Rad2/XPG loading to the chromatin.\" Nucleic acids research 47.17 (2019): 8988-9004."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a48d1544",
+   "id": "43994d97",
    "metadata": {},
    "outputs": [],
    "source": []
